@@ -104,7 +104,7 @@ public class HMaster extends Thread implements HConstants, HMasterInterface,
   // started here in HMaster rather than have them have to know about the
   // hosting class
   volatile AtomicBoolean closed = new AtomicBoolean(true);
-  volatile boolean shutdownRequested = false;
+  volatile AtomicBoolean shutdownRequested = new AtomicBoolean(false);
   volatile boolean fsOk = true;
   final Path rootdir;
   private final HBaseConfiguration conf;
@@ -334,7 +334,7 @@ public class HMaster extends Thread implements HConstants, HMasterInterface,
    */
   public HServerAddress getRootRegionLocation() {
     HServerAddress rootServer = null;
-    if (!shutdownRequested && !closed.get()) {
+    if (!shutdownRequested.get() && !closed.get()) {
       rootServer = regionManager.getRootRegionLocation();
     }
     return rootServer;
@@ -364,9 +364,14 @@ public class HMaster extends Thread implements HConstants, HMasterInterface,
     try {
       while (!closed.get()) {
         // check if we should be shutting down
-        if (shutdownRequested && serverManager.numServers() == 0) {
-          startShutdown();
-          break;
+        if (shutdownRequested.get()) {
+          // The region servers won't all exit until we stop scanning the
+          // meta regions
+          regionManager.stopScanners();
+          if (serverManager.numServers() == 0) {
+            startShutdown();
+            break;
+          }
         }
         // work on the TodoQueue. If that fails, we should shut down.
         if (!processToDoQueue()) {
@@ -377,8 +382,6 @@ public class HMaster extends Thread implements HConstants, HMasterInterface,
       LOG.fatal("Unhandled exception. Starting shutdown.", t);
       closed.set(true);
     }
-    // The region servers won't all exit until we stop scanning the meta regions
-    regionManager.stopScanners();
     
     // Wait for all the remaining region servers to report in.
     serverManager.letRegionServersShutdown();
@@ -532,7 +535,6 @@ public class HMaster extends Thread implements HConstants, HMasterInterface,
    */
   void startShutdown() {
     closed.set(true);
-    regionManager.stopScanners();
     synchronized(toDoQueue) {
       toDoQueue.clear();                         // Empty the queue
       delayedToDoQueue.clear();                  // Empty shut down queue
@@ -592,7 +594,7 @@ public class HMaster extends Thread implements HConstants, HMasterInterface,
 
   public void shutdown() {
     LOG.info("Cluster shutdown requested. Starting to quiesce servers");
-    this.shutdownRequested = true;
+    this.shutdownRequested.set(true);
   }
 
   public void createTable(HTableDescriptor desc)
